[package]
name = "rust_annotale"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bio = "3.0.0"
genomic-system-finder-hmm = "0.1.2"
hmmer-pure-rs = { git = "https://github.com/henriksson-lab/hmmer-pure-rs", version = "0.6.0" }
rayon = "1.10.0"
clap = { version = "4.6.1", features = ["derive"] }
strsim = "0.11.1"
flate2 = "1.0.35"



